content: refresh 09-primitive-obsession with recovery-agent rewrites
The recovery agent for 09-primitive-obsession produced more polished
versions of 5 files (find-bug, interview, optimize, specification, tasks)
that landed on disk after the initial 07 commit. This commit picks them up.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>